feat: implement GameManager core engine with automated configuration patching and session status tracking